# ScaleChiplet

./: README.md
Full-gpt2-6/: host_gpt2_generate  host_gpt2_generate.cpp
Full-gpt2-routesafe3/: Full-gpt2-routesafe3.ltx  Full-gpt2-routesafe3.xclbin.info  Full-gpt2-routesafe3.xclbin.link_summary  README.md  build_host_gpt2_generate.sh  export_gpt2_base3_real_io.py  host_gpt2_generate  host_gpt2_generate.cpp  system.cfg
Full-gpt2-routesafe3/gpt2_generate_io/: golden_greedy_text.txt  golden_top10_tokens.json  metadata.json
Full-gpt2-sim/: build_host_gpt2_12layers.sh  host_gpt2_12layers.cpp
Full-gpt2-sim-eng/: host_gpt2_generate  host_gpt2_generate.cpp
Full-gpt2-sim-eng/gpt2_generate_io/: golden_greedy_text.txt  golden_top10_tokens.json  metadata.json  token_decoder_hex.tsv
scalehls-results-l8/: 1_gpt2.rpt  1_mobilenet.rpt  1_resnet18.rpt  1_vgg16.rpt  3_gpt2_stitched_top_csynth.rpt  3_mobilenet_stitched_top_csynth.rpt  3_resnet18_stitched_top_csynth.rpt  3_vgg16_stitched_top_csynth.rpt  6_gpt2_stitched_top_csynth.rpt  6_mobilenet_stitched_top_csynth.rpt  6_resnet18_stitched_top_csynth.rpt  6_vgg16_stitched_top_csynth.rpt
tensor-mlir-results/: base3_stitched_stream_top_csynth.rpt  base3_stitched_top_csynth.rpt  equal3_stitched_stream_top_csynth.rpt  equal3_stitched_top_csynth.rpt  merged8to3_stitched_stream_top_csynth.rpt  merged8to3_stitched_top_csynth.rpt  paul-chipletpasses.rpt
tensor-mlir-results/ip-save1/ip0/drivers/b3c0_v1_0/src/: CMakeLists.txt  Makefile  xb3c0.c  xb3c0.h  xb3c0_hw.h  xb3c0_linux.c  xb3c0_sinit.c
(+734 files in other folders)
